# dataddo-utils

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  workflow.yaml
src/dataddo/: __init__.py  data_api.py
tests/: test_data_api.py
