[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "prochac-dataddo-utils"
version = "0.0.1"
authors = [
    { name = "Tomáš Karela Procházka", email = "tomas.prochazka5d@gmail.com" },
]
description = "Prochac's Dataddo Utils"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "requests",
]

[project.urls]
Homepage = "https://github.com/prochac/dataddo-utils"
Issues = "https://github.com/prochac/dataddo-utils/issues"

[tool]
[tool.hatch.build.targets.wheel]
packages = [
    "src/dataddo"
]