[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prochac-dataddo-utils"
version = "0.1.1"
authors = [
    { name = "Tomáš Karela Procházka", email = "tomas.prochazka5d@gmail.com" },
]
description = "Prochac's Dataddo Utils"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyarrow",
    "requests",
]

[project.urls]
Homepage = "https://github.com/prochac/dataddo-utils"
Issues = "https://github.com/prochac/dataddo-utils/issues"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataddo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ty.src]
include = ["src", "tests"]
